2007-02-24  Ernesto Baschny  <ernst@cron-it.de>

	* Fix for bug fix #2677: Highlighting of current page in workspaces was not de-highlighting previous one

2007-02-21  Ingmar Schlecht  <ingmar@typo3.org>

	* Release of TYPO3 4.1RC2

2007-02-21  Michael Stucki  <michael@typo3.org>

	* Security fix: Email injection vulnerability in t3lib_formmail (reported and fixed by Andreas Otto and Thorsten Kahler)

2007-02-20  Michael Stucki  <michael@typo3.org>

	* Fixed bug in EM: Insecure extensions were still displayed (patch by Karsten Dambekalns)
	* Fixed a typo in class.em_xmlhandler.php
	* Fixed a typo in typo3/sysext/install/mod/class.tx_install.php
	* Changed another bug in the EM: Last update of extensions.xml.gz was not displayed
	* Fixed bug #4951: SQL error when editing BE User
	* Fixed bug #3412: Changed default size limits for various BE upload fields to 10M (this default can be defined through $TYPO3_CONF_VARS[BE][maxFileSize] or individually per field through $TCA)
	* Various changes to t3skin (by Thomas Murphy):
		- folder icon got more contrast
		- navtree: darker color for hover & active states
		- font-weight: bold; for active state

2007-02-20  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #4202: be_groups - fields restricted by a low maxitems value
	* Fixed bug #4873: EM - Warning on uploading extension to TER (unserialize)
	* Fixed bugs #3655 and #4701: No wrappers for certain events (patch by Martin Kutschker)
	* Fixed bug: IRRE - Related child records are not updated when copying to a different page

2007-02-20  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #4993: IE 5.5 and Konqueror compatibility for AJAX navtree

2007-02-20  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #5032: [LocalLang: 0?]DEF is sometimes displayed for content elements

2007-02-19  Ingmar Schlecht  <ingmar@typo3.org>
