@@ -1,3 +1,7 @@
+2007-02-25  Oliver Hader  <oh@inpublica.de>
+
+	* Fixed bug #5055: SQL problem with reviewstate in EM (thanks to Franz-Xaver Koch)
+
 2007-02-24  Ernesto Baschny  <ernst@cron-it.de>
 
 	* Fix for bug fix #2677: Highlighting of current page in workspaces was not de-highlighting previous one
